Project

General

Profile

Actions

Bug #38347

closed

ceph.in: cephfs status line may not show active ranks when standby-replay present

Added by Patrick Donnelly about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

e.g.

    mds: cephfs:1 {0=c=up:standby-replay}, 0 up:standby
Actions #1

Updated by Patrick Donnelly about 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 26459
Actions #2

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF