mds: do not show standby-replay as ranks

Before:

    mds: cephfs:1 {0=c=up:standby-replay}, 0 up:standby

After:

    mds: a:1 {0=cs=up:active} 1 up:standby-replay 4 up:standby

Fixes: http://tracker.ceph.com/issues/38347
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>